# slim_bridge

./: .dockerignore  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.orig  README.md  package.xml
examples/: ros1_2_test.py  ros2_1_test.py
include/slim_bridge/: bridge.hpp  convert.hpp  factories.hpp  factory.hpp  factory_interface.hpp  qos.hpp
launch/: bridge.launch.py
scripts/: cmd_script.sh  ddsconfig.xml  initial_topics.yaml  start_docker.sh  stop_docker.sh
src/: bridge.cpp
test/: ros1_2_test.py  ros2_1_test.py
